--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.34.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.4",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
