--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "apexcharts": "^3.32.0",
+    "atoms": "^0.2.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-query": "^3.34.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4",
     "typescript": "^4.4.4",
