--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "apexcharts": "^3.32.0",
     "atoms": "^0.2.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
@@ -30,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +58,6 @@
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
-  }
+  },
+  "homepage": "https://whljm1003.github.io/Crypto_tracker"
 }
